tests/error/non_defined_entry_point.c
// compile -entry main
// fail "Entry point has to be defined."

void main();
